Source/Alternet.UI.Pal/Api/TextBoxTextAttr.Api.h

ALTERNET_UI_API void TextBoxTextAttr_SetTextEffects_(void* attr, int effects)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetTextEffects(attr, effects);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetTextEffectFlags_(void* attr, int effects)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetTextEffectFlags(attr, effects);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_SetOutlineLevel_(void* attr, int level)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::SetOutlineLevel(attr, level);
    });
}
ALTERNET_UI_API int64_t TextBoxTextAttr_GetFlags_(void* attr)
{
    return MarshalExceptions<int64_t>([&](){
        return TextBoxTextAttr::GetFlags(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetFontSize_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetFontSize(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetFontStyle_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetFontStyle(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetFontWeight_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetFontWeight(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_GetFontUnderlined_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::GetFontUnderlined(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetUnderlineType_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetUnderlineType(attr);
    });
}
ALTERNET_UI_API Color_C TextBoxTextAttr_GetUnderlineColor_(void* attr)
{
    return MarshalExceptions<Color_C>([&](){
        return TextBoxTextAttr::GetUnderlineColor(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_GetFontStrikethrough_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::GetFontStrikethrough(attr);
    });
}
ALTERNET_UI_API char16_t* TextBoxTextAttr_GetFontFaceName_(void* attr)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(TextBoxTextAttr::GetFontFaceName(attr));
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetFontFamily_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetFontFamily(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetParagraphSpacingAfter_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetParagraphSpacingAfter(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetParagraphSpacingBefore_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetParagraphSpacingBefore(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetLineSpacing_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetLineSpacing(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetBulletStyle_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetBulletStyle(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetBulletNumber_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetBulletNumber(attr);
    });
}
ALTERNET_UI_API char16_t* TextBoxTextAttr_GetBulletText_(void* attr)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(TextBoxTextAttr::GetBulletText(attr));
    });
}
ALTERNET_UI_API char16_t* TextBoxTextAttr_GetURL_(void* attr)
{
    return MarshalExceptions<char16_t*>([&](){
        return AllocPInvokeReturnString(TextBoxTextAttr::GetURL(attr));
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetTextEffects_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetTextEffects(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetTextEffectFlags_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetTextEffectFlags(attr);
    });
}
ALTERNET_UI_API int TextBoxTextAttr_GetOutlineLevel_(void* attr)
{
    return MarshalExceptions<int>([&](){
        return TextBoxTextAttr::GetOutlineLevel(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_IsCharacterStyle_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::IsCharacterStyle(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_IsParagraphStyle_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::IsParagraphStyle(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_IsDefault_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::IsDefault(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasTextColor_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasTextColor(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasBackgroundColor_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasBackgroundColor(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasAlignment_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasAlignment(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasTabs_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasTabs(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasLeftIndent_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasLeftIndent(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasRightIndent_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasRightIndent(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontWeight_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontWeight(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontSize_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontSize(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontPointSize_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontPointSize(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontPixelSize_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontPixelSize(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontItalic_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontItalic(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontUnderlined_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontUnderlined(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontStrikethrough_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontStrikethrough(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontFaceName_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontFaceName(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontEncoding_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontEncoding(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFontFamily_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFontFamily(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFont_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFont(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasParagraphSpacingAfter_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasParagraphSpacingAfter(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasParagraphSpacingBefore_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasParagraphSpacingBefore(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasLineSpacing_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasLineSpacing(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasCharacterStyleName_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasCharacterStyleName(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasParagraphStyleName_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasParagraphStyleName(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasListStyleName_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasListStyleName(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasBulletStyle_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasBulletStyle(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasBulletNumber_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasBulletNumber(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasBulletText_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasBulletText(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasBulletName_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasBulletName(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasURL_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasURL(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasPageBreak_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasPageBreak(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasTextEffects_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasTextEffects(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasTextEffect_(void* attr, int effect)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasTextEffect(attr, effect);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasOutlineLevel_(void* attr)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasOutlineLevel(attr);
    });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_HasFlag_(void* attr, int64_t flag)
{
    return MarshalExceptions<c_bool>([&](){
        return TextBoxTextAttr::HasFlag(attr, flag);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_RemoveFlag_(void* attr, int64_t flag)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::RemoveFlag(attr, flag);
    });
}
ALTERNET_UI_API void TextBoxTextAttr_AddFlag_(void* attr, int64_t flag)
{
    MarshalExceptions<void>([&](){
        TextBoxTextAttr::AddFlag(attr, flag);
    });
}