Source/Alternet.UI/Native/TextBoxTextAttr.Generated.cs

            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetTextEffects_(System.IntPtr attr, int effects);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetTextEffectFlags_(System.IntPtr attr, int effects);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_SetOutlineLevel_(System.IntPtr attr, int level);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern long TextBoxTextAttr_GetFlags_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetFontSize_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetFontStyle_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetFontWeight_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_GetFontUnderlined_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetUnderlineType_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color TextBoxTextAttr_GetUnderlineColor_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_GetFontStrikethrough_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string TextBoxTextAttr_GetFontFaceName_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetFontFamily_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetParagraphSpacingAfter_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetParagraphSpacingBefore_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetLineSpacing_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetBulletStyle_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetBulletNumber_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string TextBoxTextAttr_GetBulletText_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string TextBoxTextAttr_GetURL_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetTextEffects_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetTextEffectFlags_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int TextBoxTextAttr_GetOutlineLevel_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_IsCharacterStyle_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_IsParagraphStyle_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_IsDefault_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasTextColor_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasBackgroundColor_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasAlignment_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasTabs_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasLeftIndent_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasRightIndent_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFontWeight_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFontSize_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFontPointSize_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFontPixelSize_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFontItalic_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFontUnderlined_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFontStrikethrough_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFontFaceName_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFontEncoding_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFontFamily_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFont_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasParagraphSpacingAfter_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasParagraphSpacingBefore_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasLineSpacing_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasCharacterStyleName_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasParagraphStyleName_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasListStyleName_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasBulletStyle_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasBulletNumber_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasBulletText_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasBulletName_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasURL_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasPageBreak_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasTextEffects_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasTextEffect_(System.IntPtr attr, int effect);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasOutlineLevel_(System.IntPtr attr);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool TextBoxTextAttr_HasFlag_(System.IntPtr attr, long flag);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_RemoveFlag_(System.IntPtr attr, long flag);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void TextBoxTextAttr_AddFlag_(System.IntPtr attr, long flag);
            
        }
    }
}
